Fix spacing in share module

--- a/sass/modules/widgets/_share.scss
+++ b/sass/modules/widgets/_share.scss
@@ -1,4 +1,4 @@
 /**** AddThis Post Snippet ****/
-.shareaholic-share-button-container:not(.vertical) .shareaholic-share-button-container {
+.shareaholic-canvas .shareaholic-share-buttons-container:not(.vertical) .shareaholic-share-button-container {
     margin: 0 10px;
 }
